# Rnotify

./: Cargo.toml  config.json  db.sql
src/: config_load.rs  db.rs  main.rs
src/api/: earthquake.rs  mod.rs
src/send_api/: discord_webhook.rs  line_messaging.rs  line_notify.rs  mod.rs
