[package]
name = "Rnotify"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
mysql_async = "0.35.1"
tokio-tungstenite = { version = "0.26.0", features = ["native-tls"] }
futures-util = "0.3"
